# outlook-chatbot

./: .gitignore  emailprocessing_updated.txt  plan.md  quick-plan-react-graph.md
backend/: ENHANCED_RAG_SUMMARY.md  PANDAAGI_INTEGRATION.md  config.yaml  config_loader.py  debug_blobs.py  gmail_imap.py  main.py  requirements.txt  test_blob_downloads.py  test_enhanced_rag.py  test_pandasai_routing.py
backend/rag/: api.py  pandasai_integration.py  parsers.py  retriever.py  router.py  tabular_agent.py
be/: config_loader.py  gmail_imap.py  main.py  pyproject.toml  requirements.txt  test.ipynb
be/rag/: api.py  custom_pandasai.py  data_cache.py  enhanced_agent.py  pandasai_integration.py  router.py  tabular_agent.py  vector_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  graph.ts  index.css  main.tsx  msalConfig.ts
